[11217609f216b78bb986028365bf0885d3ca7a29]: Merge pull request #225 from DeveloperCielo/tsaitobraspag-patch-158
Update 2000-01-01-controletransacional4.md

--- a/manual/controletransacional4.html
+++ b/manual/controletransacional4.html
@@ -488,7 +488,7 @@ O response possuirá o <code class="highlighter-rouge">Checkout_Cielo_Order_Numb
       <td><code class="highlighter-rouge">merchantId</code></td>
       <td>GUID</td>
       <td>36</td>
-      <td>Número do pedido da loja.</td>
+      <td>Id da Loja no Checkout</td>
       <td>Exemplo: c89fdfbb-dbe2-4e77-806a-6d75cd397dac</td>
     </tr>
     <tr>
