[f8db0b6254af0c856b4cd4247c9f06624ba37065]: Merge pull request #227 from DeveloperCielo/tsaitobraspag-patch-160
Update 2000-01-01-controletransacional4.md

--- a/manual/controletransacional4.html
+++ b/manual/controletransacional4.html
@@ -496,7 +496,7 @@ O response possuirá o <code class="highlighter-rouge">Checkout_Cielo_Order_Numb
       <td>Texto</td>
       <td>32</td>
       <td>Número do pedido da loja.</td>
-      <td> </td>
+      <td>Exemplo: 123456</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">softDescriptor</code></td>
@@ -629,7 +629,7 @@ O response possuirá o <code class="highlighter-rouge">Checkout_Cielo_Order_Numb
       <td>Texto</td>
       <td>3</td>
       <td>Código de autorização.</td>
-      <td>Exemplo:</td>
+      <td>Exemplo: 456789</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.numberOfPayments</code></td>
