--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -175,7 +175,7 @@ Currently are available:</p>
 
 <p><strong>- Visa:</strong> the card brand does not has a Stand-In model and just issuers 100% ready with its own solution are able to respond to an authenticated request using the 3DS 2.0 EMV.</p>
 
-<aside class="notice"> Issuers that are ready with its own solution of 3DS 2.0 Visa: Caixa (Credit – currently with silent authentication, no challenge), Santander (Debit and Credit) e Itaú (Debit and Credit – currently with silent authentication, no challenge). </aside>
+<aside class="notice"> Issuers that are ready with its own solution of 3DS 2.0 Visa: Caixa (Credit – currently with silent authentication, no challenge), Santander (Debit and Credit) e Itaú (Credit – currently with silent authentication, no challenge). </aside>
 
 <h2 id="what-is-the-data-only---notification-only">What is the Data Only - Notification Only</h2>
 
