[ef47115b47f5902f3fda9d8a8122b70658441788]: Merge pull request #230 from DeveloperCielo/tsaitobraspag-patch-163
Update 2018-09-10-emv3ds.md

--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -416,6 +416,10 @@
       <td>onError</td>
       <td>É acionado quando o processo de autenticação recebeu um erro sistêmico. Neste cenário, se a transação é autorizada, o liability shift permanece com o estabelecimento.</td>
     </tr>
+    <tr>
+      <td>onUnsupportedBrand</td>
+      <td>É acionado quando a bandeira do cartão não é suportado pelo 3DS 2.0</td>
+    </tr>
   </tbody>
 </table>
 
