[6c4839d1a85eedbdb05122516c3f92f77bc083f3]: Merge pull request #233 from DeveloperCielo/tsaitobraspag-patch-166
Update 2018-09-10-emv3ds.md

--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -386,7 +386,7 @@ Currently are available:</p>
 
 <p>To download the code, <a href="https://github.com/DeveloperCielo/developercielo.github.io/blob/docs/_i18n/pt/_posts/emv3ds/exemplo.html">Click here</a></p>
 
-<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/images/exemplo-html_-_en.jpg" alt="Fluxo 3DS 2.0" /></p>
+<p><img src="https://developercielo.github.io/images/exemplo-html.jpg" alt="Exemplo Script 3DS 2.0" /></p>
 
 <p>Events Description</p>
 
