[97b89de0095be6637ed810b38429a28570a9df8f]: Merge pull request #234 from DeveloperCielo/tsaitobraspag-patch-167
Update 2018-09-10-emv3ds.md

--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -422,6 +422,10 @@ Currently are available:</p>
       <td>onError</td>
       <td>It is triggered when the authentication process receives a systemic error. In this scenario, if the transaction is authorized, the liability shift remains with the merchant.</td>
     </tr>
+    <tr>
+      <td>onUnsupportedBrand</td>
+      <td>It is triggered when the card scheme is not supported by 3DS 2.0</td>
+    </tr>
   </tbody>
 </table>
 
