[ae8cd237883eb6f6264f20c2a23f5da99300f553]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -8784,7 +8784,7 @@ It is possible to carry out both the total cancellation and the partial cancella
     </tr>
     <tr>
       <td><code class="highlighter-rouge">MM-A</code></td>
-      <td>Billing and delivery addresses use different street names</td>
+      <td>CONFIRM THE ADDRESS: Billing and shipping addresses are not related</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">MM-BIN</code></td>
@@ -8792,19 +8792,19 @@ It is possible to carry out both the total cancellation and the partial cancella
     </tr>
     <tr>
       <td><code class="highlighter-rouge">MM-C</code></td>
-      <td>Billing and delivery addresses use different cities</td>
+      <td>CONFIRM THE ADDRESS: Billing and shipping addresses are not related</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">MM-CO</code></td>
-      <td>Billing and delivery addresses use different countries</td>
+      <td>CONFIRM THE ADDRESS: Billing and shipping addresses are not related</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">MM-ST</code></td>
-      <td>Billing and delivery addresses use different states</td>
+      <td>CONFIRM THE ADDRESS: Billing and shipping addresses are not related</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">MM-Z</code></td>
-      <td>Billing and delivery addresses use different postal codes</td>
+      <td>CONFIRM THE ADDRESS: Billing and shipping addresses are not related</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">UNV-ADDR</code></td>
@@ -8825,15 +8825,15 @@ It is possible to carry out both the total cancellation and the partial cancella
   <tbody>
     <tr>
       <td><code class="highlighter-rouge">MORPH-B</code></td>
-      <td>The same billing address has been used multiple times with multiple customer identities</td>
+      <td>CAUTION: billing address was used by many different customers</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">MORPH-C</code></td>
-      <td>The same account number has been used multiple times with multiple client identities</td>
+      <td>CAUTION: the card was used by many different customers</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">MORPH-E</code></td>
-      <td>The same e-mail address has been used multiple times with multiple customer identities</td>
+      <td>CAUTION: email address was used by many different clients</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">MORPH-I</code></td>
@@ -8841,11 +8841,11 @@ It is possible to carry out both the total cancellation and the partial cancella
     </tr>
     <tr>
       <td><code class="highlighter-rouge">MORPH-P</code></td>
-      <td>The same phone number has been used multiple times with multiple customer identities</td>
+      <td>CAUTION: phone number was used by many different clients</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">MORPH-S</code></td>
-      <td>The same delivery address has been used multiple times with multiple customer identities</td>
+      <td>CAUTION: delivery address was used by many different clients</td>
     </tr>
   </tbody>
 </table>
