[f888f3a254ad444ccc8afc3a458822b1a7e0d66e]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -8788,7 +8788,7 @@ It is possible to carry out both the total cancellation and the partial cancella
     </tr>
     <tr>
       <td><code class="highlighter-rouge">MM-BIN</code></td>
-      <td>The BIN of the card (the first six digits of the number) does not match the country</td>
+      <td>CONFIRM THE PURCHASE WITH CARD HOLDER: Used card was issued in another country</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">MM-C</code></td>
